# minio_mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
